--- a/shopping-common/pom.xml
+++ b/shopping-common/pom.xml
@@ -37,5 +37,11 @@
             <version>2.13.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.7.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
